# rusty-nn-zero-to-hero

./: .gitignore  Cargo.toml  LICENSE  README.md
candle-intro/: Cargo.toml
candle-intro/src/: main.rs
makemore/: Cargo.toml
micrograd/: Cargo.toml
nanogpt/: Cargo.toml
notebooks/: 1_RustTest.ipynb
